[metadata]
name = Cache
version = 0.1
author = KOLANICH
url = https://gitlab.com/KOLANICH/Cache.py
description = Just a library implementing a dumb compressed cache for JSON-serializeable objects.
long_description = file: ReadMe.md
keywords = cache
license = Unlicense
classifiers =
	Programming Language :: Python
	Programming Language :: Python :: 3
	Development Status :: 4 - Beta
	Environment :: Other Environment
	Intended Audience :: Developers
	License :: Public Domain
	License :: Public Domain :: Unlicense
	Operating System :: OS Independent
	Topic :: Software Development :: Libraries :: Python Modules

[options]
python_requires = >=3.4
zip_safe = True
packages = Cache, Cache.storageBackends
install_requires =
	transformerz @ git+https://github.com/KOLANICH-libs/transformerz.py
	pantarei @ git+https://gitlab.com/KOLANICH/pantarei.py
setup_requires = setuptools>=44; wheel; setuptools_scm[toml]>=3.4.3

[options.extras_require]
#bson = transformerz[bson] # it doesn't allow primitives (strings, ints) at root level and also is not the most compact binary JSON impl
cbor = transformerz[cbor]
msgpack = transformerz[msgpack]
lz4 = transformerz[lz4]
brotli = transformerz[brotli]
zstd = transformerz[zstandard]
lmdb = lmdb
